# idelephant

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  idelephant.toml  rust-toolchain.toml
.buildkite/: image_version.py  pipeline.py
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: auth.rs  credential.rs  identity.rs  main.rs  register.rs
common/: Cargo.toml
common/src/: lib.rs
email_templates/: invite_email.html.tmpl  invite_email.txt.tmpl
resources/: index.css  index.html  script.js
scripts/: image_version.py
src/: auth.rs  bytes.rs  config.rs  embed.rs  error.rs  idmouse.rs  invite.rs  json.rs  later.rs  main.rs  oauth.rs  oidc.rs  persistence.rs  register.rs  util.rs
src/web/: mod.rs
src/webauthn/: attestation.rs  client_data.rs  mod.rs
tests/: sample_auth_response.json
web_templates/: accept.html.tmpl  authorize.html.tmpl  index.html.tmpl
webauthn/: Cargo.toml
webauthn/src/: attestation.rs  client_data.rs  json.rs  lib.rs  registration.rs
webauthn/tests/: sample_register_response.json
