[package]
name = "idelephant"
version = "0.2.0"
edition = "2021"

[workspace]
members = [
    "client",
    "common",
    "webauthn",
]

[dependencies]
idelephant_common = {path = "common"}
anyhow = { workspace = true }
axum = "0.8"
rust-embed = "8.11"
tokio = { version = "1.51" }
mime_guess = "2.0"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"]}
tracing = "0.1"
tracing-subscriber = {  workspace = true }
rand = "0.10"
base64 = { workspace = true }
sha2 = { workspace = true }
tower-sessions-surrealdb-store = { git = "https://github.com/nresare/tower-sessions-surrealdb-store", branch = "combined_surreal3_fixes" }
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv"] }
tower-sessions = "0.15"
time = "0.3.46"
serde_json = { workspace = true }
thiserror = { workspace = true }
idelephant_webauthn = { path = "webauthn"}
toml = "1.1"
ssh-key = "0.6.7"
clap = { workspace = true }
lettre = { version = "0.11", features = ["native-tls", "webpki-roots", "tokio1", "tokio1-native-tls", "builder"] }
handlebars = "6.4"
url = "2.5"
jsonwebtoken = "10.3"
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
zqlu = "0.2"
bytes = "1.11"

[workspace.dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
hex-literal = "1.1"
const-oid = { version = "0.10", features = ["db"] }
spki = { version = "0.8", features = ["alloc"]}
sha2 = "0.10.8"
tracing-subscriber = {  version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }


[dev-dependencies]
surrealdb = { version = "3", default-features = false, features = ["kv-mem"] }
tower = { version = "0.5", features = ["util"] }
