[package]
name = "idelephant-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.12.12", features = ["blocking", "cookies", "json", "rustls-tls"] }
serde_json = {workspace = true}

base64 = {workspace = true}
# I'm expecting the crypto to move into the webauthn library at some point

idelephant_webauthn = {path = "../webauthn"}
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand = "0.9.0"
rand_core = "0.6.4"
spki = { workspace = true }
sha2 = "0.10.8"
log = "0.4.25"
tracing-subscriber = { workspace = true}
[dev-dependencies]
hex-literal = { workspace = true}
