[package]
name = "idelephant-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.12.14", features = ["blocking", "cookies", "json", "rustls-tls"] }
serde_json = {workspace = true}

base64 = {workspace = true}
# I'm expecting the crypto to move into the webauthn library at some point

idelephant_webauthn = {path = "../webauthn"}
p256 = { version = "0.13.2", features = ["ecdsa"] }
rand = "0.9.0"
spki = { workspace = true }
sha2 = "0.10.8"
log = "0.4.26"
tracing-subscriber = { workspace = true}
ssh-agent-client-rs = "0.9.1"
ssh-key = { version = "0.6.7", features = ["crypto"] }
clap = { version = "4.5.32", features = ["derive"] }

[dev-dependencies]
hex-literal = { workspace = true}
