[package]
name = "idelephant-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "cookies", "json", "rustls"] }
serde_json = {workspace = true}

base64 = {workspace = true}
# I'm expecting the crypto to move into the webauthn library at some point

idelephant_webauthn = {path = "../webauthn"}
idelephant_common = {path = "../common"}
p256 = { workspace = true, features = ["ecdsa"] }
const-oid = { workspace = true }
rand = { workspace = true }
spki = { workspace = true }
sha2 = { workspace = true }
log = "0.4"
tracing-subscriber = { workspace = true}
ssh-agent-client-rs = "1.1"
ssh-key = { workspace = true, features = ["crypto"] }
clap = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true}
