[package]
name = "idelephant_common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {workspace = true}
# Keep this in sync with the spki version
const-oid = {workspace = true}
spki = {workspace = true}
ssh-key = "0.6.7"
zqlu = "0.2"

[dev-dependencies]
hex-literal = { workspace = true}
