[package]
name = "idelephant_webauthn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow =  { workspace = true }
sha2 = { workspace = true }
spki = { workspace = true }
p256 = { workspace = true }
ciborium = "0.2.2"
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
hex-literal = {workspace = true}
